--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/afchicken.html">Air Fryer Chicken Thighs</a>
+    <a href="recipes/afchicken.html" target="_blank" rel="noopener noreferrer">Air Fryer Chicken Thighs</a>
 </body>
 </html>
