Added ramen recipe and linked to index Created Ramen webpage and added ramen image to images

--- a/recipes/afchicken.html
+++ b/recipes/afchicken.html
@@ -3,11 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Air Fryer Chicken Thighs</title>
 </head>
 <body>
     <h1>Air Fryer Chicken Thighs</h1>
-
-    <img src="../images/afchicken.jpg">
+    <img src="../images/afchicken.jpg" width="350" height="350">
+    <p>These crispy <strong><em>Air Fryer Chicken Thighs </em></strong>have become a weeknight staple in my house. An <strong>easy</strong> recipe that you can whip up super fast!</p>
+    <ul>
+        <li>6 chicken thighs with bone and skin</li>
+        <li>1 lemon</li>
+        <li>1 teaspoon kosher salt</li>
+        <li>1/4 teaspoon black pepper</li>
+        <li>1 teaspoon garlic powder</li>
+        <li>1 teaspoon onion powder</li>
+        <li>1/2 teaspoon sweet paprika</li>
+        <li>1/2 teaspoon dried herbs such as herbs de provenance or dried oregano</li>
+    </ul>
+    <ol>
+        <li>Season the chicken with the juice of 1/2 of the lemon, then season with remaining spices on both sides.</li>
+        <li>Rub the seasoning well all over the chicken then transfer to the air fryer, skin side down.</li>
+        <li>Air fry 400F 12 minutes on each side, until golden and crispy and cooked through in the center.</li>
+    </ol>
 </body>
 </html>
