--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/afchicken.html" target="_blank" rel="noopener noreferrer">Air Fryer Chicken Thighs</a>
+    <ul>
+        <li><a href="recipes/afchicken.html" target="_blank" rel="noopener noreferrer">Air Fryer Chicken Thighs</a></li>
+
+    </ul>
 </body>
 </html>
