--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/afchicken.html" target="_blank" rel="noopener noreferrer">Air Fryer Chicken Thighs</a></li>
-
+        <li><a href="recipes/ramen.html" target="_blank" rel="noopener noreferrer">Homemade Ramen</a></li>
+        <li><a href="recipes/chili.html" target="_blank" rel="noopener noreferrer">Simple Chili Recipe</a></li>
     </ul>
 </body>
 </html>
