Added headings to recipe webpages Added Instructions, Description, and Ingredient headings for visual appeal

--- a/recipes/afchicken.html
+++ b/recipes/afchicken.html
@@ -8,7 +8,9 @@
 <body>
     <h1>Air Fryer Chicken Thighs</h1>
     <img src="../images/afchicken.jpg" width="350" height="350">
+    <h2>Description</h2>
     <p>These crispy <strong><em>Air Fryer Chicken Thighs </em></strong>have become a weeknight staple in my house. An <strong>easy</strong> recipe that you can whip up super fast!</p>
+    <h2>Ingredients</h2>
     <ul>
         <li>6 chicken thighs with bone and skin</li>
         <li>1 lemon</li>
@@ -19,6 +21,7 @@
         <li>1/2 teaspoon sweet paprika</li>
         <li>1/2 teaspoon dried herbs such as herbs de provenance or dried oregano</li>
     </ul>
+    <h2>Instructions</h2>
     <ol>
         <li>Season the chicken with the juice of 1/2 of the lemon, then season with remaining spices on both sides.</li>
         <li>Rub the seasoning well all over the chicken then transfer to the air fryer, skin side down.</li>
