--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>Homemade Ramen</h1>
-    <p>This homemade Ramen recipe has savory noodles and juicy chicken in a flavorful broth with vegetables and the best seasonings! This cozy recipe is easy to make and serve with soft boiled eggs and a sprinkling of green onions.</p>
     <img src="../images/ramen-.jpg" height="350" width="350">
+    <h2>Description</h2>
+    <p>This homemade Ramen recipe has savory noodles and juicy chicken in a flavorful broth with vegetables and the best seasonings! This cozy recipe is easy to make and serve with soft boiled eggs and a sprinkling of green onions.</p>
+<h2>Ingredients</h2>
     <ul>
         <li>1/2 cup dry white wine</li>
         <li>1 tablespoon butter</li>
@@ -21,6 +23,7 @@
         <li>2 (3 oz.) packets instant Ramen noodles</li>
         <li>6 leaves Bok Choy</li>
     </ul>
+<h2>Instructions</h2>
     <ol>
         <li>Heat 1 tablespoon olive oil and 1 tablespoon of butter in a large soup pot over medium-high heat. Add the mushrooms. Sauté until golden, about 4 minutes. Remove and set aside so that they retain the color, flavor, and texture.</li>
         <li>Slice the chicken in half lengthwise to create 2 thinner slices. Cover with saran wrap and use the textured side of a meat mallet to pound it to ½ inch thick.</li>
