--- a/recipes/chili.html
+++ b/recipes/chili.html
@@ -8,7 +8,9 @@
 <body>
     <h1>Simple Chili Recipe</h1>
     <img src="../images/chili.jpg" height="350" width="350">
+    <h2>Description</h2>
     <p>Homemade chili is delicious and goes great with cornbread or over corn chips for a chili pie! I like to use spicy pinto beans.</p>
+    <h2>Ingredients</h2>
     <ul>
         <li>1 pound ground beef</li>
         <li>1 onion, chopped</li>
@@ -20,7 +22,7 @@
         <li>1 pinch garlic powder</li>
         <li>salt and pepper to taste</li>
     </ul>
-
+<h2>Instructions</h2>
     <ol>
         <li>Place ground beef and onion in a large saucepan over medium heat; cook and stir until meat is browned and onion is tender, about 5 to 7 minutes.</li>
         <li>Stir in tomato sauce, kidney beans, and stewed tomatoes with juice. If you prefer a thinner consistency, you can add water. Season with chili powder, garlic powder, salt, and black pepper. Bring to a boil, reduce heat to low, cover and let simmer for 15 minutes.</li>
